[package]
authors = ["Jazarro <nospam.git@boschman.io>"]
edition = "2018"
name = "dsf_precompile"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

amethyst = {git = "https://github.com/saveriomiroddi/amethyst-dev", branch = "REFERENCE/profiled_frame_limiter/0.15.3", features = ["vulkan"]}

serde = {version = "1.0", features = ["derive"]}
